--- a/about.html
+++ b/about.html
@@ -737,7 +737,7 @@
         >
           <span
             ><img
-              src="image/menu-removebg-preview.png"
+              src="menu-removebg-preview.png"
               alt=""
               width="30px"
           /></span>
@@ -823,7 +823,7 @@
       <div class="row" style="margin-top: 50px">
         <div class="col-md-5 py-3 py-md-0">
           <div class="card">
-            <img src="image/elc.png-removebg-preview.png" alt="" />
+            <img src="elc.png-removebg-preview.png" alt="" />
           </div>
         </div>
         <div class="col-md-7 py-3 py-md-0">
