--- a/index.html
+++ b/index.html
@@ -646,10 +646,10 @@
       <p>WELCOME TO OUR SHOP</p>
       <div class="icons">
         <a href="login.html"
-          ><img src="image/dou.png" alt="" width="18px" />Login</a
+          ><img src="dou.png" alt="" width="18px" />Login</a
         >
         <a href="register.html"
-          ><img src="image/dou.png" alt="" width="18px" />Register</a
+          ><img src="dou.png" alt="" width="18px" />Register</a
         >
       </div>
     </div>
@@ -670,7 +670,7 @@
         >
           <span
             ><img
-              src="image/menu-removebg-preview.png"
+              src="menu-removebg-preview.png"
               alt=""
               width="30px"
           /></span>
@@ -749,7 +749,7 @@
         <div class="btn"><button>Shop Now</button></div>
       </div>
       <div class="img">
-        <img src="image/elc.png-removebg-preview.png" alt="" />
+        <img src="elc.png-removebg-preview.png" alt="" />
       </div>
     </section>
 
@@ -760,7 +760,7 @@
       <div class="row" style="margin-top: 30px">
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/iphone.png" alt="" />
+            <img src="iphone.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Iphone 13 pro</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -779,7 +779,7 @@
         </div>
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/airpods.png" alt="" />
+            <img src="airpods.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Airpods</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -798,7 +798,7 @@
         </div>
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/laptop.png" alt="" />
+            <img src="laptop.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Laptop</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -817,7 +817,7 @@
         </div>
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/ipad.png" alt="" />
+            <img src="ipad.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Ipad</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -839,7 +839,7 @@
       <div class="row" style="margin-top: 30px">
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/watch.png" alt="" />
+            <img src="watch.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Smart Watch</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -858,7 +858,7 @@
         </div>
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/pc.png" alt="" />
+            <img src="pc.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">PC Moniter</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -877,7 +877,7 @@
         </div>
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/iphone x.png" alt="" />
+            <img src="iphone x.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Iphone x</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -896,7 +896,7 @@
         </div>
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/head.png" alt="" />
+            <img src="head.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Headphone</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -921,7 +921,7 @@
         <div class="row">
           <div class="col-md-6 py-3 py-md-0">
             <div class="card">
-              <img src="image/laptop2.png" alt="" />
+              <img src="laptop2.png" alt="" />
               <div class="card-img-overlay">
                 <h3>Best Laotop</h3>
                 <h5>Latest Collection</h5>
@@ -932,7 +932,7 @@
           </div>
           <div class="col-md-6 py-3 py-md-0">
             <div class="card">
-              <img src="image/head2.png" alt="" />
+              <img src="head2.png" alt="" />
               <div class="card-img-overlay">
                 <h3>Best Headphone</h3>
                 <h5>Latest Collection</h5>
@@ -960,7 +960,7 @@
           <div class="btn"><button>Shop Now</button></div>
         </div>
         <div class="img">
-          <img src="image/banner-removebg-preview.png" alt="" />
+          <img src="banner-removebg-preview.png" alt="" />
         </div>
       </section>
 
@@ -970,7 +970,7 @@
         <div class="row" style="margin-top: 30px">
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/wc.png" alt="" />
+            <img src="wc.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Washion Machine</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -989,7 +989,7 @@
         </div>
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/ac.png" alt="" />
+            <img src="ac.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">AC</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1008,7 +1008,7 @@
         </div>
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/oven.png" alt="" />
+            <img src="oven.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Microwave Oven</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1027,7 +1027,7 @@
         </div>
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="image/fg.png" alt="" />
+            <img src="fg.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Fridge</h3>
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1051,7 +1051,7 @@
       <div class="row">
         <div class="col-md-4 py-3 py-md-0">
           <div class="card">
-            <img src="image/hg.png" alt="">
+            <img src="hg.png" alt="">
             <div class="card-img-overlay">
               <h3>Home Gadget</h3>
               <P>Latest Collection Up To 50% off</P>
@@ -1060,7 +1060,7 @@
         </div>
         <div class="col-md-4 py-3 py-md-0">
           <div class="card">
-            <img src="image/gg.png" alt="">
+            <img src="gg.png" alt="">
             <div class="card-img-overlay">
               <h3>Gaming Gadget</h3>
               <P>Latest Collection Up To 50% off</P>
@@ -1069,7 +1069,7 @@
         </div>
         <div class="col-md-4 py-3 py-md-0">
           <div class="card">
-            <img src="image/eg.png" alt="">
+            <img src="eg.png" alt="">
             <div class="card-img-overlay">
               <h3>Electronic Gadget</h3>
               <P>Latest Collection Up To 50% off</P>
@@ -1082,7 +1082,7 @@
     <div class="row" style="margin-top: 30px">
       <div class="col-md-3 py-3 py-md-0">
         <div class="card">
-          <img src="image/fan.png" alt="" />
+          <img src="fan.png" alt="" />
           <div class="card-body">
             <h3 class="text-center">Fan</h3>
             <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1101,7 +1101,7 @@
       </div>
       <div class="col-md-3 py-3 py-md-0">
         <div class="card">
-          <img src="image/home.png" alt="" />
+          <img src="home.png" alt="" />
           <div class="card-body">
             <h3 class="text-center">Home Theatir</h3>
             <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1120,7 +1120,7 @@
       </div>
       <div class="col-md-3 py-3 py-md-0">
         <div class="card">
-          <img src="image/PCC.PNG.png" alt="" />
+          <img src="PCC.PNG.png" alt="" />
           <div class="card-body">
             <h3 class="text-center">Gaming PC</h3>
             <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1139,7 +1139,7 @@
       </div>
       <div class="col-md-3 py-3 py-md-0">
         <div class="card">
-          <img src="image/tv.png" alt="" />
+          <img src="tv.png" alt="" />
           <div class="card-body">
             <h3 class="text-center">T.V</h3>
             <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1161,7 +1161,7 @@
     <div class="row" style="margin-top: 30px">
       <div class="col-md-3 py-3 py-md-0">
         <div class="card">
-          <img src="image/mouse.png" alt="" />
+          <img src="mouse.png" alt="" />
           <div class="card-body">
             <h3 class="text-center">Gaming Mouse</h3>
             <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1180,7 +1180,7 @@
       </div>
       <div class="col-md-3 py-3 py-md-0">
         <div class="card">
-          <img src="image/bank.png" alt="" />
+          <img src="bank.png" alt="" />
           <div class="card-body">
             <h3 class="text-center">Power Bank</h3>
             <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1199,7 +1199,7 @@
       </div>
       <div class="col-md-3 py-3 py-md-0">
         <div class="card">
-          <img src="image/mixer.png" alt="" />
+          <img src="mixer.png" alt="" />
           <div class="card-body">
             <h3 class="text-center">Mixer</h3>
             <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1218,7 +1218,7 @@
       </div>
       <div class="col-md-3 py-3 py-md-0">
         <div class="card">
-          <img src="image/joy.png" alt="" />
+          <img src="joy.png" alt="" />
           <div class="card-body">
             <h3 class="text-center">Joysticks</h3>
             <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -1347,7 +1347,7 @@
     </footer>
 
     <a href="#" class="arrow">
-      <i><img src="image/arrow2-removebg-preview.png" alt="" width="50px"></i>
+      <i><img src="arrow2-removebg-preview.png" alt="" width="50px"></i>
     </a>
 
 
